packages/core/src/components/slider/slider.scss
/*
 * SPDX-FileCopyrightText: 2023 Siemens AG
 *
 * SPDX-License-Identifier: MIT
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
@import 'mixins/shadow-dom/component';

@mixin track {
  // Chrome, Safari, Opera, and Edge Chromium
  input[type='range']::-webkit-slider-runnable-track {
    @content;
  }

  // Firefox
  input[type='range']::-moz-range-track {
    @content;
  }
}

@mixin clear-browser-thumb {
  // Chrome, Safari, Opera, and Edge Chromium
  input[type='range' i]::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    margin-top: -6px;
  }

  // Firefox
  input[type='range' i]::-moz-range-thumb {
    border: none;
    border-radius: 0;
  }
}

@mixin thumb {
  // Chrome, Safari, Opera, and Edge Chromium
  input[type='range']::-webkit-slider-thumb {
    @content;
  }

  // Firefox
  input[type='range']::-moz-range-thumb {
    @content;
  }
}

@mixin thumb-hover {
  // Chrome, Safari, Opera, and Edge Chromium
  input[type='range']:hover::-webkit-slider-thumb {
    @content;
  }

  // Firefox
  input[type='range']:hover::-moz-range-thumb {
    @content;
  }
}

@mixin thumb-active {
  // Chrome, Safari, Opera, and Edge Chromium
  input[type='range']:active::-webkit-slider-thumb {
    @content;
  }

  // Firefox
  input[type='range']:active::-moz-range-thumb {
    @content;
  }
}

@mixin thumb-focus {
  input[type='range']:focus {
    outline: none;
  }

  // Chrome, Safari, Opera, and Edge Chromium
  input[type='range']:focus-visible::-webkit-slider-thumb {
    @content;
  }

  // Firefox
  input[type='range']:focus-visible::-moz-range-thumb {
    @content;
  }
}

:host {
  @include ix-component;
  display: flex;
  flex-direction: column;
  min-height: 2rem;
  --thumb-size: 1rem;
  --value: 0;
  --trace-start: 0;
  --trace-end: 0;
  --trace-reference: 0;
  --trace-reference-color: var(--theme-color-8);
  --trace-color: var(--theme-color-dynamic);
  --tick-color: var(--theme-color-5);
  --tick-color--active: var(--theme-color-dynamic);

  input[type='range'] {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    left: 0;
    appearance: none;
    background: transparent;
    cursor: pointer;
    width: 100%;
    height: 1rem;
    margin: 0;
  }

  // Trace line
  input[type='range'].trace::before {
    content: '';
    position: absolute;
    display: block;

    width: calc(
      calc(7px + calc(100% * var(--trace-end)) - calc(16px * var(--trace-end))) -
        calc(
          7px + calc(100% * var(--trace-start)) -
            calc(16px * var(--trace-start))
        )
    );

    left: calc(
      7px + calc(100% * var(--trace-start)) - calc(16px * var(--trace-start))
    );

    height: 4px;
    background-color: var(--trace-color);
    top: 50%;
    transform: translateY(-50%);
  }

  // Trace reference
  input[type='range'].trace::after {
    content: '';
    position: absolute;
    display: block;
    width: 2px;
    height: 16px;
    background-color: var(--trace-reference-color);
    top: 50%;
    transform: translateY(-50%);
    left: calc(
      7px + calc(100% * var(--trace-reference)) -
        calc(16px * var(--trace-reference))
    );
  }

  @include track() {
    background: transparent;
    height: 0.25rem;
  }

  @include clear-browser-thumb();

  @include thumb() {
    border-radius: 100px;
    background-color: var(--theme-color-dynamic);
    height: var(--thumb-size);
    width: var(--thumb-size);
    transition: all var(--theme-default-time) ease-in-out;
    z-index: 10;
  }

  @include thumb-hover() {
    transform: scale(1.2);
    background-color: var(--theme-color-dynamic);
  }

  @include thumb-active() {
    transform: scale(1.2);

    background-color: var(--theme-color-dynamic);
  }

  @include thumb-focus() {
    outline: 1px solid var(--theme-color-focus-bdr);
    outline-offset: 0.125rem;
  }

  /* style datalist */
  .ticks {
    display: flex;
    position: relative;
    top: 50%;
    transform: translateY(-50%);
  }
  .ticks .tick {
    display: block;
    position: absolute;
    width: 8px;
    height: 8px;
    background-color: var(--tick-color);
    border-radius: 100px;
    top: 50%;
    transform: translateY(-50%);
    left: calc(var(--tick-value) * 100% - 4px);
  }

  .ticks .tick.tick-active {
    background-color: var(--tick-color--active);
  }

  .slider {
    position: relative;
    display: block;
    width: 100%;
    height: 1.5rem;
  }

  .track {
    position: absolute;
    background-color: var(--theme-color-component-1);
    height: 4px;
    width: calc(100% - 1rem);
    margin-left: 0.5rem;
    top: 50%;
    transform: translateY(-50%);
    left: 0px;
  }

  .thumb {
    display: block;
    position: absolute;
    background-color: transparent;
    height: 1rem;
    width: 1rem;
    border-radius: 100px;
    left: 0px;
    top: 50%;
    transform: translateY(-50%);
  }

  .hide-tooltip {
    display: none;
  }

  .label {
    display: flex;
    position: relative;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    margin-top: 0.5rem;

    min-height: 0px;
  }

  .label-start {
    margin-left: 0.5rem;
  }

  .label-end {
    margin-right: 0.5rem;
  }

  .label-error {
    margin-left: 0.5rem;
  }
}

:host(.error) {
  --trace-color: var(--theme-color-alarm);
  --tick-color--active: var(--theme-color-alarm);

  @include thumb() {
    background-color: var(--theme-color-alarm);
  }
}

:host(.disabled) {
  pointer-events: none;

  --trace-color: var(--theme-color-7);
  --tick-color: var(--theme-color-7);
  --tick-color--active: var(--theme-color-7);
  --trace-reference-color: var(--theme-color-7);

  @include thumb() {
    background-color: var(--theme-color-7);
  }
}

